--- a/index.html
+++ b/index.html
@@ -119,9 +119,17 @@
 
 
     <footer>
+
+        <div class="sfondo-nero clearfix">
+
+
+            <div</div>
+
+
+        
+
+        </div>
       
-
-
     </footer>
 
 
