--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
               <!-- QUARTO QUADRANTE -->
 
 
-            <section class="fotofloat-4">
+            <section class="fullview">
                 <div class="container" >
-                    <div class="testo">
-                        <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                        <h2>Tecnologia affidabile per tenersi in contatto</h2>
                         <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-                    </div>
-                    <img class="img-4" src="./asset/img/item4-big.svg" alt="foto-4">
-                    <div class="testo-sotto">
-                        <h2>Pronto a iniziare la tua avventura?</h2>
-                        <a  class="bottone blu" href="">Scarica per Mac</a>
-                    </div>
+                        <img class="img-4" src="./asset/img/item4-big.svg" alt="foto-4">
+                        <h3 class="stars">Pronto a iniziare la tua avventura?</h3>
+                        <div>
+                            <a  class="button scarica-blu" href="">Scarica per Mac</a>
+                        </div>
                 </div>
             </section>
 
         </main>
+
+            <!--  PARTE FINALE  -->
 
 
         <footer>
