correzione dimensione tag p nel quarto quadrante

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                         <img class="img-4" src="./asset/img/item4-big.svg" alt="foto-4">
                         <h3 class="stars">Pronto a iniziare la tua avventura?</h3>
-                        <div>
+                        <div class="button-v">
                             <a  class="button-violet" href="">Scarica per Mac</a>
                         </div>
                 </div>
@@ -142,7 +142,7 @@
                         <ul>
                             <li>
                                 <a href="">Scarica</a>
-                             </li>
+                            </li>
                         </ul>
                      </nav>
                 </div>
